# client-server

./: README.md
client/: CMakeLists.txt  client.cpp
client/jsonfile/: message.json
client/src/: AboutJson.cpp  CMakeLists.txt  TCPClient.cpp
include/: AboutJson.h  TCPClient.h  TCPServer.h  common.h
server/: CMakeLists.txt  server.cpp
server/src/: CMakeLists.txt  TCPServer.cpp
